<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PunchCard</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>
    <string name="weather_sunny"></string>
    <string name="weather_clear_night"></string>
    <string name="weather_foggy"></string>
    <string name="weather_cloudy"></string>
    <string name="weather_rainy"></string>
    <string name="weather_snowy"></string>
    <string name="weather_thunder"></string>
    <string name="weather_drizzle"></string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">Manager sign up</string>
    <string name="slide_to">Slide to</string>
    <string name="pause_shift">Pause Shift</string>
    <string name="shift_details">Shift Details</string>
    <string name="time_place_holder">00:00</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="slide_to_end">Slide to End</string>
    <string name="slide_to_start">Slide to Start</string>
    <string name="shift_ended">Shift Ended</string>
    <string name="resume_shift">Resume Shift</string>
    <string name="start_shift">Start Shift</string>
    <string name="end_shift">End Shift</string>
    <string name="title_activity_create_new_shift">CreateNewShiftActivity</string>
    <string name="image">image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">New Button</string>

    <string-array name="roles">
        <item>manager</item>
        <item>employee</item>
    </string-array>

    <string name="title_activity_invite_employee">Employees</string>
    <string name="invite">invite</string>
    <string name="action_invite">Add Employee</string>
    <string name="action_finish">Finish</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_shift">ShiftActivity</string>
    <string name="greeting_label">Welcome Back!</string>
    <string name="email_address">Email-Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="manager_sign_up">Manager Sign Up</string>
    <string name="employees">Employees</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="take_photo">Take Photo</string>
    <string name="shift">Shift</string>
    <string name="on_the_clock">On the clock</string>
    <string name="end_label">End:</string>
    <string name="start_label">Start:</string>

</resources>
