<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.punchcard.PlaceholderFragment"
    xmlns:su="http://schemas.android.com/apk/res-auto"
    >
    
    <RelativeLayout android:id="@+id/rlControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout android:id="@+id/rlNextShift"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <ImageView android:id="@+id/ivClock"
                    android:src="@drawable/clock"
                    android:layout_margin="15dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    />

                <TextView android:id="@+id/tvStartsIn"
                    android:text="Shift starts in 16 minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/ivClock"
                    android:layout_toEndOf="@id/ivClock"
                    android:layout_marginTop="19dp"
                    android:padding="10dp" />

                <TextView android:id="@+id/tvWeather"
                    android:text="Weather: Sunny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvStartsIn"
                    android:layout_toRightOf="@id/ivClock"
                    android:layout_toEndOf="@id/ivClock"
                    android:padding="10dp" />

                <TextView android:id="@+id/tvNote"
                    android:text="Please bring sunscreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvWeather"
                    android:layout_toRightOf="@id/ivClock"
                    android:layout_toEndOf="@id/ivClock"
                    android:padding="10dp" />
            </RelativeLayout>
            
            <RelativeLayout android:id="@+id/rlInProgress"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Chronometer android:id="@+id/chronometer"
                    android:textSize="@dimen/h1"
                    android:text="@string/time_place_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                <RelativeLayout android:layout_below="@id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <Button android:id="@+id/btnDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shift_details"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <ToggleButton android:id="@+id/btnPause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pause_shift"
                        android:textOn="@string/resume_shift"
                        android:textOff="@string/pause_shift"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_alignBottom="@+id/btnDetails"
                        android:layout_toRightOf="@+id/btnDetails"
                        android:layout_toEndOf="@+id/btnDetails" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>


        <Button android:id="@+id/btnEnd"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlHeader"
            android:text="@string/end_shift"
            android:layout_centerHorizontal="true" />

        <com.codepath.punchcard.SlideToUnlock
            android:id="@+id/slidetounlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_below="@id/rlHeader"
            android:layout_centerHorizontal="true"
            su:text="Slide to Start"
            su:thumb="@drawable/slidetounlock_thumb"
            />
    </RelativeLayout>
    
    <com.google.android.gms.maps.MapView android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_below="@id/rlControls"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
