<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="com.codepath.punchcard.activities.ProfileActivity" >

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rlProfileInfo"
        android:background="@color/white">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/ivProfileImage"
            android:contentDescription="@string/image"
            android:layout_alignParentStart="true"
            android:src="@drawable/person_placeholder"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_margin="10dp"
            app:border="true"
            app:border_color="#EEEEEE"
            app:border_width="4dp"
            app:shadow="true"/>

        <TextView android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/name"
            android:layout_margin="10dp"
            android:layout_alignTop="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage" />

        <com.melnykov.fab.FloatingActionButton android:id="@+id/fab_edit_profile"
            app:fab_type="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            fab:fab_colorNormal="@color/accent_color"
            fab:fab_colorPressed="@color/dark_primary_color"
            fab:fab_colorRipple="@color/light_primary_color"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />


        <TextView android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivProfileImage"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/email"
            android:textColor="@color/secondary_text"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/ivProfileImage" />
    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlProfileInfo"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <com.astuetz.PagerSlidingTabStrip android:id="@+id/tabs"
            app:pstsShouldExpand="true"
            app:pstsTextAllCaps="false"
            android:layout_width="match_parent"
            app:pstsIndicatorHeight="4dp"
            app:pstsIndicatorColor="@color/accent_color"
            app:pstsUnderlineColor="@color/transparent"
            android:background="@android:color/white"
            android:layout_height="48dp"/>

        <android.support.v4.view.ViewPager android:id="@+id/viewpager"
            android:layout_below="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</RelativeLayout>
